# matxin

./: .gitignore  AUTHORS  Makefile.am  README  README.modes  autogen.sh  configure.ac  matxin.m4
src/: Makefile.am  analyser.cc  chunker.cc  data_manager.cc  data_manager.h  dependency_tree.cc  dependency_tree.h  dependency_tree_node.cc  dependency_tree_node.h  feats.cc  feats.h  gen_fst2regex.sh  gen_matxin_translator.sh  generate.cc  generate.h  html-deformat.cc  io_redirect_handler.cc  io_redirect_handler.h  lex_trans.cc  linearise.cc  matxin-header.sh  matxin_string_utils.cc  matxin_string_utils.h  modes2bash.xsl  morph_gen.cc  reformat.cc  relation.cc  relation.h  rtf-deformat.cc  sg_inter.cc  sg_intra.cc  sg_move.cc  st_inter.cc  st_intra.cc  st_prep.cc  st_verb.cc  transfer.cc  transfer_preprocess.cc  txt-deformat.cc  txt-format.xml  (+15 more)
src/test/: Makefile.am  deserialise_conll_u.cc
